--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-lg p-4">
             <div class="container-fluid">
-                <img class="bsu-logo" src="assets/images/logo-bsu.webp" alt="No Connection">
+                <img class="bsu-logo" src="images/logo-bsu.webp" alt="No Connection">
                 <a class="navbar-brand text-light ms-3" href="#">Batangas State University</a>
             </div>
         </nav>
@@ -101,10 +101,10 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="assets/java-script/index.js"></script>
-    <script src="assets/java-script/chart1.js"></script>
-    <script src="assets/java-script/chart2.js"></script>
-    <script src="assets/java-script/chart3.js"></script>
-    <script src="assets/java-script/chart4.js"></script>
+    <script src="java-script/index.js"></script>
+    <script src="java-script/chart1.js"></script>
+    <script src="java-script/chart2.js"></script>
+    <script src="java-script/chart3.js"></script>
+    <script src="java-script/chart4.js"></script>
 </body>
 </html>
