--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Dashboard</title>
+    <title>Batangas State University - Real-Time Monitoring Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
 </head>
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-lg p-4">
             <div class="container-fluid">
-                <img class="bsu-logo" src="images/logo-bsu.webp" alt="No Connection">
+                <img class="bsu-logo" src="images/logo-bsu.webp" alt="Batangas State University Logo">
                 <a class="navbar-brand text-light ms-3" href="#">Batangas State University</a>
             </div>
         </nav>
@@ -19,32 +19,31 @@
 
     <main>
         <section class="m-1">
-            <div class="container container-fluid text-center text-light">
-                <div class="row d-flex justify-content-center">
-                    <div class="col col-5 col-md-6 col-lg-2 border border-dark mx-lg-5 my-3 mx-1 p-5">
+            <div class="container text-center text-light">
+                <div class="row justify-content-center">
+                    <div class="col-5 col-md-6 col-lg-2 border border-dark mx-lg-5 my-3 mx-1 p-5">
                         <span>Voltage</span>
                         <ul class="list-inline">
                             <li id="voltage" class="list-inline-item">.....</li>
                             <li class="list-inline-item">V</li>
                         </ul>
                     </div>
-                    <div class="col col-5 col-md-6 col-lg-2 border border-dark mx-lg-5 my-3 mx-1 p-5">
+                    <div class="col-5 col-md-6 col-lg-2 border border-dark mx-lg-5 my-3 mx-1 p-5">
                         <span>Current</span>
                         <ul class="list-inline">
                             <li id="current" class="list-inline-item">.....</li>
                             <li class="list-inline-item">I</li>
                         </ul>
                     </div>
-                    <div class="col col-5 col-md-6 col-lg-2 border border-dark mx-lg-5 my-3 mx-1 p-5">
+                    <div class="col-5 col-md-6 col-lg-2 border border-dark mx-lg-5 my-3 mx-1 p-5">
                         <span>Power</span>
                         <ul class="list-inline">
                             <li id="power" class="list-inline-item">.....</li>
                             <li class="list-inline-item">W</li>
                         </ul>
                     </div>
-                    <div class="col col-5 col-md-6 col-lg-2 border border-dark mx-lg-5 my-3 mx-1 p-5">
+                    <div class="col-5 col-md-6 col-lg-2 border border-dark mx-lg-5 my-3 mx-1 p-5">
                         <span>Energy</span>
-
                         <ul class="list-inline">
                             <li id="energy" class="list-inline-item">.....</li>
                             <li class="list-inline-item">K/H</li>
@@ -54,49 +53,39 @@
             </div>
         </section>
 
-        <section class=" text-light pb-5">
+        <section class="text-light pb-5">
             <h1 class="ms-4">Voltage</h1>
-            <div class="section2 container-fluid">
-                <div class="cont22 container-fluid pb-5">
-                    <div class="monitor1 border border-primary">
-                        <canvas id="myChart"></canvas>
-                    </div>
+            <div class="container-fluid pb-5">
+                <div class="border border-primary">
+                    <canvas id="myChart"></canvas>
                 </div>
-            </div> 
-
+            </div>
 
             <h1 class="ms-4">Current</h1>
-            <div class="section2 container-fluid">
-                <div class="container-fluid pb-5">
-                    <div class="monitor1 border border-primary">
-                        <canvas id="myChart2"></canvas>
-                    </div>
+            <div class="container-fluid pb-5">
+                <div class="border border-primary">
+                    <canvas id="myChart2"></canvas>
                 </div>
-            </div> 
-
+            </div>
 
             <h1 class="ms-4">Power</h1>
-            <div class="section2 container-fluid">
-                <div class="container-fluid pb-5">
-                    <div class="monitor1 border border-primary">
-                        <canvas id="myChart3"></canvas>
-                    </div>
+            <div class="container-fluid pb-5">
+                <div class="border border-primary">
+                    <canvas id="myChart3"></canvas>
                 </div>
-            </div> 
+            </div>
 
             <h1 class="ms-4">Energy</h1>
-            <div class="section2 container-fluid">
-                <div class="container-fluid pb-5">
-                    <div class="monitor1 border border-primary">
-                        <canvas id="myChart4"></canvas>
-                    </div>
+            <div class="container-fluid pb-5">
+                <div class="border border-primary">
+                    <canvas id="myChart4"></canvas>
                 </div>
-            </div> 
+            </div>
         </section>
     </main>
 
     <footer>
-        
+        <!-- Footer content here, if needed -->
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
