--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="java-script/index.js"></script>
     <script type="module" src="java-script/chart1.js"></script>
-    <script type="module" src="java-script/chart2.js"></script>
+<!--     <script type="module" src="java-script/chart2.js"></script>
     <script type="module" src="java-script/chart3.js"></script>
-    <script type="module" src="java-script/chart4.js"></script>
+    <script type="module" src="java-script/chart4.js"></script> -->
 </body>
 </html>
