--- a/index.html
+++ b/index.html
@@ -102,10 +102,11 @@
     <script src="https://cdn.ably.io/lib/ably.min-1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="java-script/websocket-manager.js"></script>
     <script type="module" src="java-script/index.js"></script>
     <script type="module" src="java-script/chart1.js"></script>
-<!--     <script type="module" src="java-script/chart2.js"></script>
+    <script type="module" src="java-script/chart2.js"></script>
     <script type="module" src="java-script/chart3.js"></script>
-    <script type="module" src="java-script/chart4.js"></script> -->
+    <script type="module" src="java-script/chart4.js"></script>
 </body>
 </html>
